--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="chat-header">
             <div class="bot-avatar">🤖</div>
             <div class="bot-status">
-                <h2>CyberBot v2.0</h2>
+                <h2>Jarvis-bot v2.0</h2>
                 <span class="online-tag">Vision Active</span>
             </div>
         </header>
@@ -44,4 +44,5 @@
 </div>
 <script src="script.js"></script>
 </body>
+
 </html>
